--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,1 +1,18 @@
-<p>por-capital works!</p>
+<h2>Por Capital</h2>
+<hr>
+<section class="row">
+  <div class="col">
+    <app-input-search (onEnter)="buscar($event)" (OnDebounce)="sugerencias($event)" placeholder="Capital...">
+    </app-input-search>
+  </div>
+</section>
+
+<div class="alert alert-danger mt-4" *ngIf="error">
+  Sin resultados para el termino: "<strong>{{termino}}</strong>"
+</div>
+
+<section class="row" *ngIf="country.length > 0">
+  <div class="col">
+    <app-capital-tabla [country]="country"></app-capital-tabla>
+  </div>
+</section>
