--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main class="row container mt-4 m-auto">
+<main class="row container-fluid mt-4 m-auto">
 
   <aside class="col-4">
     <app-sidebar></app-sidebar>
