--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,17 @@
-<p>por-region works!</p>
+<h2>Por País</h2>
+<hr>
+<section class="row">
+  <div class="col">
+    <app-input-search (onEnter)="buscar($event)" (OnDebounce)="sugerencias($event)"></app-input-search>
+  </div>
+</section>
+
+<div class="alert alert-danger mt-4" *ngIf="error">
+  Sin resultados para el termino: "<strong>{{termino}}</strong>"
+</div>
+
+<section class="row" *ngIf="country.length > 0">
+  <div class="col">
+    <app-pais-tabla [country]="country"></app-pais-tabla>
+  </div>
+</section>
