--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main class="row container-fluid mt-4 m-auto">
 
-  <aside class="col-4">
+  <aside class=" col-md-3 mb-4">
     <app-sidebar></app-sidebar>
   </aside>
   <section class="col">
