--- a/src/app/pais/components/capital-tabla/capital-tabla.component.html
+++ b/src/app/pais/components/capital-tabla/capital-tabla.component.html
@@ -1,4 +1,4 @@
-<table class="table table-hover text-center">
+<table class="table table-hover animate__animated animate__fadeIn">
   <thead>
     <tr>
       <th>#</th>
@@ -10,7 +10,7 @@
   </thead>
   <tbody>
     <tr *ngFor="let item of country; let i=index">
-      <td>{{i}}</td>
+      <td>{{i+1}}</td>
       <td class="">
         <img src={{item.flags.svg}} alt={{item.flag}} class="small-flag rounded">
       </td>
