--- a/src/app/pais/components/region-tabla/region-tabla.component.html
+++ b/src/app/pais/components/region-tabla/region-tabla.component.html
@@ -1,1 +1,24 @@
-<p>region-tabla works!</p>
+<table class="table table-sm table-hover animate__animated animate__fadeIn">
+
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Bandera</th>
+      <th>Nombre</th>
+      <th>Población</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let item of country; let i=index" class="animate__animated animate__fadeIn">
+      <td>{{i+1}}</td>
+      <td class="">
+        <img src={{item.flags.svg}} alt={{item.flag}} class="small-flag rounded">
+      </td>
+      <td>{{item.name.common}}</td>
+      <td>{{item.population | number}}</td>
+      <td><a [routerLink]="['/pais',item.cca2]">ver...</a></td>
+    </tr>
+
+  </tbody>
+</table>
