--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,17 +1,26 @@
-<h2>Por País</h2>
-<hr>
-<section class="row">
-  <div class="col">
-    <app-input-search (onEnter)="buscar($event)" (OnDebounce)="sugerencias($event)"></app-input-search>
-  </div>
-</section>
+<section class="animate__animated animate__fadeIn">
 
-<div class="alert alert-danger mt-4" *ngIf="error">
-  Sin resultados para el termino: "<strong>{{termino}}</strong>"
-</div>
+  <h2>Por País</h2>
+  <hr>
+  <section class="row">
+    <div class="col">
+      <app-input-search (onEnter)="buscar($event)" (OnDebounce)="sugerencias($event)"></app-input-search>
+    </div>
+  </section>
+  <ul class="list-sug" *ngIf="paisesSugeridos.length >=0">
+    <li class="  list-group-item list-group-item-action animate__animated animate__fadeIn"
+      *ngFor="let pais of paisesSugeridos" (click)="buscar(pais.name.common)">
+      {{pais.name.common}}
+    </li>
+  </ul>
 
-<section class="row" *ngIf="country.length > 0">
-  <div class="col">
-    <app-pais-tabla [country]="country"></app-pais-tabla>
+  <div class="alert alert-danger mt-4" *ngIf="error">
+    Sin resultados para el termino: "<strong>{{termino}}</strong>"
   </div>
+
+  <section class="row" *ngIf="country.length > 0">
+    <div class="col table-responsive">
+      <app-pais-tabla [country]="country"></app-pais-tabla>
+    </div>
+  </section>
 </section>
