--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 <h2>Busquedas</h2>
 <hr>
 <ul class="list-group">
-  <li routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="list-group-item">
+  <li routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="list-group-item w-auto">
     Buscar país
   </li>
-  <li routerLink="region" routerLinkActive="active" class="list-group-item">Por región</li>
-  <li routerLink="capital" routerLinkActive="active" class="list-group-item">Por capital</li>
+  <li routerLink="region" routerLinkActive="active" class="list-group-item w-auto">Por región</li>
+  <li routerLink="capital" routerLinkActive="active" class="list-group-item w-auto">Por capital</li>
 </ul>
